log
Thu 25 Apr 2024 03:06:30 PM UTC: 
 tests:  0|6
total_score: 0/70
914bd3a
Thu 25 Apr 2024 03:14:31 PM UTC: 
 hashmap.c | 32 +++++++++++++++++++++++++-------
 1 file changed, 25 insertions(+), 7 deletions(-)
 tests:  5|4
total_score: 30/70
69f1d8b
Thu 25 Apr 2024 03:23:51 PM UTC: 
 hashmap.c | 17 ++++++++++++++---
 1 file changed, 14 insertions(+), 3 deletions(-)
 tests:  8|3
total_score: 40/70
351e9ee
Sat 27 Apr 2024 02:42:36 AM UTC: 
 hashmap.c | 15 +++++++++++++--
 1 file changed, 13 insertions(+), 2 deletions(-)
 tests:  8|3
total_score: 40/70
5016239
Sat 27 Apr 2024 02:45:09 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|2
total_score: 50/70
2f89f7a
Sat 27 Apr 2024 02:47:02 AM UTC: 
 hashmap.c | 14 ++++++++++++--
 1 file changed, 12 insertions(+), 2 deletions(-)
 tests:  13|2
total_score: 50/70
585a192
Sat 27 Apr 2024 02:48:04 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  13|2
total_score: 50/70
94ae8d9
Sat 27 Apr 2024 02:50:29 AM UTC: 
 hashmap.c | 21 +++++++++++++++++----
 1 file changed, 17 insertions(+), 4 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘firstMap’:
hashmap.c:117:44: error: returning ‘char *’ from a function with incompatible return type ‘Pair *’ [-Werror=incompatible-pointer-types]
  117 |           return map->buckets[map->current]->key;
      |                  ~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~
cc1: all warnings being treated as errors
Compilation failed
7adc744
Sat 27 Apr 2024 02:50:40 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  13|2
total_score: 50/70
713c5ca
Sat 27 Apr 2024 02:52:23 AM UTC: 
 hashmap.c | 7 +++----
 1 file changed, 3 insertions(+), 4 deletions(-)
 tests:  15|2
total_score: 50/70
9acdb1d
Sat 27 Apr 2024 02:53:18 AM UTC: 
 hashmap.c | 9 ++++-----
 1 file changed, 4 insertions(+), 5 deletions(-)
 tests:  15|2
total_score: 50/70
8ffafd6
Sat 27 Apr 2024 02:55:00 AM UTC: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  15|2
total_score: 50/70
d35fe6f
Sat 27 Apr 2024 02:55:57 AM UTC: 
 hashmap.c | 19 ++++++++++++-------
 1 file changed, 12 insertions(+), 7 deletions(-)
 tests:  15|2
total_score: 50/70
3af3772
Sat 27 Apr 2024 02:59:53 AM UTC: 
 hashmap.c | 23 +++++++++++++++++++++--
 1 file changed, 21 insertions(+), 2 deletions(-)
 tests:  16|1
total_score: 60/70
d0729f9
